Show info page sidebar menu correctly on smaller devices
Keep sidebar menu on side for tablets, for mobile move it to be static
on top of content.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -118,15 +118,15 @@ h1, h2, h3 {
     height: 90px;
     display: none;
 }
-
+    
 #side-nav-wrapper {
     margin-top: 20px;
 }
 
-#side-nav {
+#side-nav.affix {
+    position: static;
+    width: auto;
     top: 0;
-    margin-top: 20px;
-    width: 200px;
 }
 
 /* Index page */
@@ -270,5 +270,11 @@ h1, h2, h3 {
 @media (min-width: 768px) {
     .container {
         max-width: 1080px;
+    }
+
+    #side-nav {
+        top: 0;
+        margin-top: 20px;
+        width: 200px;
     }
 }
